--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-wallet-selector": "^1.0.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "stream": "0.0.2",
@@ -53,21 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sotatek-HoangNguyen7/wallet-selector-demo.git"
-  },
-  "keywords": [
-    "wallet-selector-auro"
-  ],
-  "author": "hoangnguyen0305",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sotatek-HoangNguyen7/wallet-selector-demo/issues"
-  },
-  "homepage": "https://github.com/Sotatek-HoangNguyen7/wallet-selector-demo#readme"
+  }
 }
